fix(scene rank): category 별 조회 시 버그 fix
- category 별 조회 시 query param 파싱 안되는 버그 수정
- category 별 조회 시 순위가 연속적이지 않은 버그 수정